--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,6 @@ jobs:
         uses: warchant/setup-sonar-scanner@v7
 
 
-      # Run sonar-scanner
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
@@ -40,6 +39,9 @@ jobs:
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.sources=src/
+            -Dsonar.host.url=https://sonarcloud.io
+            -X
+
 
 
       # Check the Quality Gate status.
