--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,24 +12,30 @@ jobs:
       - name: Code checkout
         uses: actions/checkout@v4
 
-      - name: Maven test
-        run: mvn test
-
-      - name: Checkstyle
-        run: mvn checkstyle:checkstyle
-
-      # Setup java 11 to be default (sonar-scanner requirement as of 5.x)
+      # Setup Java 11 (Sonar requirement)
       - name: Set Java 11
         uses: actions/setup-java@v3
         with:
-         distribution: 'temurin' # See 'Supported distributions' for available options
-         java-version: '11'
+          distribution: 'temurin'
+          java-version: '11'
 
-      # Setup sonar-scanner
+      # Compile code so .class files are available
+      - name: Maven compile
+        run: mvn clean compile
+
+      # Run tests
+      - name: Maven test
+        run: mvn test
+
+      # Run Checkstyle
+      - name: Checkstyle
+        run: mvn checkstyle:checkstyle
+
+      # Setup Sonar Scanner
       - name: Setup SonarQube
         uses: warchant/setup-sonar-scanner@v7
 
-
+      # SonarCloud Scan
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
@@ -40,17 +46,17 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.sources=src/
             -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.java.binaries=target/classes
+            -Dsonar.junit.reportsPath=target/surefire-reports/
+            -Dsonar.jacoco.reportPaths=target/jacoco.exec
+            -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
             -X
 
-
-
-      # Check the Quality Gate status.
+      # SonarCloud Quality Gate check
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
         uses: sonarsource/sonarqube-quality-gate-action@master
-        # Force to fail step after specific time.
         timeout-minutes: 5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_URL }} #OPTIONAL
-       
+          SONAR_HOST_URL: https://sonarcloud.io
